# shader_lab

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
shaders/noise_blur/: blur_h.wgsl  blur_v.wgsl  composite.wgsl  noise.wgsl
shaders/shared/: common.wgsl  fullscreen.wgsl
shaders/sobel/: sobel.wgsl  source.wgsl
shaders/voronoi/: voronoi.wgsl
src/: app.rs  hot_reload.rs  input.rs  main.rs
src/renderer/: context.rs  fullscreen.rs  mod.rs  pipelines.rs  targets.rs  uniforms.rs
src/scene/: mod.rs  noise_blur.rs  sobel.rs  voronoi.rs
