[package]
name = "shader_lab"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.24", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
naga = { version = "28.0.0", features = ["wgsl-in"] }
notify = "8.2"
pollster = "0.4"
wgpu = "29.0.1"
winit = "0.30"
